<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_home" />
    </group>

    <item android:title="@string/menu_g_query">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_search"
                android:title="@string/menu_send" />
            </group>
        </menu>
    </item>

    <item android:title="@string/menu_g_admin">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@android:drawable/ic_menu_upload"
                    android:title="@string/menu_gallery" />
                <item
                    android:id="@+id/nav_slideshow"
                    android:icon="@android:drawable/ic_menu_edit"
                    android:title="@string/menu_slideshow" />
                <item
                    android:id="@+id/nav_tools"
                    android:icon="@android:drawable/ic_menu_delete"
                    android:title="@string/menu_tools" />
            </group>
        </menu>
    </item>



</menu>
